objects/RTAT_Wafer_Finish_Sched_Input__c.object
<CustomObject>
    <description>Inputs needed for a wafer finish RTAT Schedule</description>
    <fields>
        <fullName>Chip_Attach_Type__c</fullName>
        <description>C4 or WB (Wirebond)</description>
        <label>Chip Attach Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WB</fullName>
                    <default>true</default>
                    <label>WB</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_size__c</fullName>
        <label>Lot size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PQ</fullName>
                    <default>true</default>
                    <label>PQ</label>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTAT_Slot__c</fullName>
        <description>Parent RTAT Slot for Wafer Finish RTAT Sched inputs</description>
        <label>RTAT Slot</label>
        <referenceTo>RTAT_Slot__c</referenceTo>
        <relationshipLabel>RTAT Wafer Finish Sched Inputs</relationshipLabel>
        <relationshipName>RTAT_Wafer_Finish_Sched_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROCKET</fullName>
                </value>
                <value>
                    <fullName>TURBO</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Tier__c</fullName>
        <description>If wafer is to be tested, choose a test tier (1 or 2)</description>
        <inlineHelpText>Test Tier 1 - Typically used for testing P-level demand - prototype product or EUH for client system debug/bring-up
Test Tier 2 - Typically used for testing PQ-level demand</inlineHelpText>
        <label>Test Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wafer_Finish_Start_Date__c</fullName>
        <label>Wafer Finish Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wafer_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if wafer testing is to be performed</description>
        <inlineHelpText>Check if wafer testing is to be performed</inlineHelpText>
        <label>Wafer Test?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_or_device_to_stock_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of deliverables (wafers or chips) to go to stock</description>
        <label>Wafer or device to stock quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wafer_size__c</fullName>
        <label>Wafer size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200MM</fullName>
                </value>
                <value>
                    <fullName>300MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RTAT Wafer Finish Sched Input</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wafer Finish RTAT Sched Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTAT Wafer Finish Sched Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>